2022-12-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an.tmac (an-end, AT, UC, DT, PD, SH, IP, BI, BR, IB, IR)
	(RB, RI, OP, an*end-hyperlink, MR): Refactor; "nop"ify macros
	that produce formatted output or call other macros using string
	interpolations--except where we can't: see Savannah #63470.

2022-12-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an.tmac (R): Drop macro definition, which implements a
	hack for people who try to use "R" as a font style macro.  This
	doesn't seem to happen much in actual practice (though perhaps
	the diagnostic this hack produces is responsible for suppression
	of the mistake).  Retaining it interferes with the
	"nop"-ification of this macro file.
	* NEWS: Add item.

2022-12-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an-ext.tmac: Use truly traditional hyphenation mode on
	non-groff-compatible formatters.

2022-12-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	[man]: Update test coverage and expectations.

	* tmac/tests/an_ME-punct-hyphenates.sh: Test both "an.tmac" and
	"an-ext.tmac" implementations of `ME`.
	* tmac/tests/an_UE-punct-hyphenates.sh: Test both "an.tmac" and
	"an-ext.tmac" implementations of `UE`.
	* tmac/tests/an_UE-breaks-before-long-URIs.sh: Update test
	expectations.  I appear to have inadvertently fixed some
	inelegant rendering.

2022-12-02  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tests]: Rename to reflect code reorganization.

	* tmac/tests/an-ext_ME-punct-hyphenates.sh:
	* tmac/tests/an-ext_MT-body-hyphenates.sh:
	* tmac/tests/an-ext_UE-breaks-before-long-URIs.sh:
	* tmac/tests/an-ext_UE-punct-hyphenates.sh:
	* tmac/tests/an-ext_UR-body-hyphenates.sh: Rename these...
	* tmac/tests/an_ME-punct-hyphenates.sh:
	* tmac/tests/an_MT-body-hyphenates.sh:
	* tmac/tests/an_UE-breaks-before-long-URIs.sh:
	* tmac/tests/an_UE-punct-hyphenates.sh:
	* tmac/tests/an_UR-body-hyphenates.sh: ...to these.
